--- a/css/app.css
+++ b/css/app.css
@@ -1,11 +1,27 @@
-.jumbotron {
+.container {
   padding: 2rem;
   width: 100rem;
   text-align: center;
   margin-top: 2rem;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem;
+  background-color: #ddd;
+  border-radius: 1rem;
 }
+
+.header {
+  flex: 1;
+}
+
+.float-start {
+  float: left;
+}
+
+.float-end {
+  float: right;
+}
+
 h3 {
   margin-bottom: 2.5rem;
 }
